# Voltage.Pricer

./: README.md  app.py  requirements.txt  test_ml_hybrid.py
config/: pyproject.toml
scripts/: test_elia.py
src/core/: settings.py
src/domain/: _3hpfc_forecasting.py  _5fusion_price.py  _6final_profiling_price.py  _optional_ppa_valuation.py  ml_forecasting.py  ppa_valuation.py  pricing_models.py  risk_models.py
src/ingestion/: _1API_connector.py  _2data_calibration.py  _4client_load_profiling.py  curve_generator.py  elia_client.py  market_data.py
src/reporting/: excel_export.py
